[tool.poetry]
name = "watermark-bot"
version = "0.1.0"
description = "Telegram bot to add a watermark to a gif or photo."
authors = ["Alen <alen.kimov@gmail.com>"]
readme = "README.md"
packages = [{include = "watermark_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.6.0"
pydantic = "^1.10.7"
aiogram = "3.0.0b7"
python-dotenv = "^1.0.0"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
