[tool.poetry]
name = "gif-caption-bot"
version = "0.2.1"
description = "Telegram bot to add a caption to a gif."
authors = ["Alen <alen.kimov@gmail.com>"]
readme = "README.md"
packages = [{include = "gif_caption_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.6.0"
aiogram = "3.0.0b7"
python-dotenv = "^1.0.0"
moviepy = "^1.0.3"
sqlalchemy = "^2.0.8"
alembic = "^1.10.2"
psycopg = {extras = ["binary"], version = "^3.1.8"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
