[tool.poetry]
name = "gif-caption-bot"
version = "0.2.8"
description = "Telegram bot to add a caption to a gif."
authors = ["Alen <alen.kimov@gmail.com>"]
readme = "README.md"
packages = [{include = "gif_caption_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
aiogram = "3.0.0b7"
moviepy = "^1.0.3"
sqlalchemy = "^2.0.10"
alembic = "^1.10.4"
psycopg = {extras = ["binary"], version = "^3.1.8"}
python-decouple = "^3.8"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
